<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_weight="1"
        android:background="@drawable/login_bg">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_weight="4.04"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/darkgreen"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/poppins"
            android:text="@string/create_your_new_account"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkgreen"
            android:elevation="20dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:textColorHint="@color/darkgreen"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkgreen"
            android:elevation="20dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/example_email_com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:textColorHint="@color/darkgreen"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/ic_padlock"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkgreen"
            android:elevation="20dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:textColorHint="@color/darkgreen"
            android:textSize="14sp" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:height="61dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/Optionals"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:paddingBottom="0dp"
                android:text="@string/or_continue_with"
                android:textAlignment="center" />

            <View
                android:id="@+id/view"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="59dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="40dp"
                android:layout_weight="0.3"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="31dp"
                android:layout_height="40dp"
                android:layout_weight="0.3"
                android:paddingStart="0dp"
                app:srcCompat="@drawable/fb_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/already_have_an_account"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:paddingStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/darkgreen" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>